--- a/app/.env.local.example
+++ b/app/.env.local.example
@@ -13,3 +13,6 @@ INDEXER_API_KEY="your-api-key"
 # NEXT_PUBLIC_RPC_URL="https://api.devnet.solana.com"
 # NEXT_PUBLIC_NETWORK="devnet"
 # NEXT_PUBLIC_PROGRAM_ID="GM8zjJ8LTBMv9xEsverh6H6wLyevgMHEJXcEzyY3rY24"
+
+# Privy wallet integration
+NEXT_PUBLIC_PRIVY_APP_ID=
