--- a/app/package.json
+++ b/app/package.json
@@ -15,11 +15,11 @@
     "@gsap/react": "^2.1.2",
     "@metaplex-foundation/mpl-token-metadata": "2.13.0",
     "@percolator/core": "workspace:*",
+    "@privy-io/react-auth": "^3.14.1",
     "@sentry/nextjs": "^10.39.0",
+    "@solana-program/memo": "^0.11.0",
+    "@solana/kit": "^6.1.0",
     "@solana/spl-token": "^0.4.14",
-    "@solana/wallet-adapter-base": "^0.9.27",
-    "@solana/wallet-adapter-react": "^0.15.39",
-    "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.95.3",
     "bn.js": "^5.2.2",
