PERC-138: Rename @percolator/core → @percolator/sdk (Phase 1 repo split) (#345)
* refactor: rename @percolator/core to @percolator/sdk across monorepo

PERC-138 Phase 1: SDK extraction preparation.

- Renamed package from @percolator/core to @percolator/sdk in packages/core/
- Updated all 74 files with import references across app/, packages/, services/
- All builds verified: app (Next.js), api, keeper, indexer, SDK
- All SDK tests passing (58 vitest + legacy tests)
- Standalone SDK repo created: github.com/dcccrypto/percolator-sdk

Remaining: npm publish requires NPM_TOKEN setup (blocked on credentials)

* fix: remaining @percolator/core references missed in initial rename

QA review caught:
- app/next.config.ts transpilePackages (build breaker)
- 6 test files in tests/
- scripts/e2e-devnet-test.ts
- Root package.json build:core script
- Removed stale packages/core/package-lock.json

* fix: address CodeRabbit review nitpicks

- Remove unused mockAbortController in useTrade.test.ts
- Consolidate duplicate @percolator/sdk imports in useMyMarkets.ts

* fix(ci): rename @percolator/core → @percolator/sdk in CI workflows

Updates all GitHub Actions workflow files to reference the renamed
SDK package (@percolator/sdk instead of @percolator/core), fixing
CI build failures where the API/shared/keeper/indexer packages
could not resolve @percolator/sdk imports.

---------

Co-authored-by: dcccrypto <dcccrypto@users.noreply.github.com>

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -33,12 +33,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      # Build core FIRST — @percolator/api, keeper, indexer, and shared all
-      # declare "@percolator/core": "workspace:*" as a dependency.
-      # Without this step TypeScript cannot resolve @percolator/core imports
+      # Build SDK FIRST — @percolator/api, keeper, indexer, and shared all
+      # declare "@percolator/sdk": "workspace:*" as a dependency.
+      # Without this step TypeScript cannot resolve @percolator/sdk imports
       # and the subsequent package builds fail with TS2307.
-      - name: Build core package
-        run: pnpm --filter @percolator/core build
+      - name: Build SDK package
+        run: pnpm --filter @percolator/sdk build
         
       - name: Build shared package
         run: pnpm --filter @percolator/shared build
