--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@metaplex-foundation/mpl-token-metadata": "2.13.0",
-    "@percolator/core": "workspace:*",
+    "@percolator/sdk": "workspace:*",
     "@privy-io/react-auth": "^3.14.1",
     "@sentry/nextjs": "^10.39.0",
     "@solana-program/memo": "^0.11.0",
