--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "pnpm -r build",
     "dev": "pnpm --filter @percolator/app dev",
     "build:app": "pnpm --filter @percolator/app build",
-    "build:core": "pnpm --filter @percolator/core build",
+    "build:core": "pnpm --filter @percolator/sdk build",
     "test": "pnpm -r test",
     "test:app": "cd app && pnpm test",
     "test:core": "cd packages/core && pnpm test",
