--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@percolator/core",
+  "name": "@percolator/sdk",
   "version": "0.1.0",
   "license": "Apache-2.0",
   "type": "module",
