--- a/packages/keeper/package.json
+++ b/packages/keeper/package.json
@@ -13,7 +13,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@percolator/core": "workspace:*",
+    "@percolator/sdk": "workspace:*",
     "@percolator/shared": "workspace:*",
     "@solana/web3.js": "^1.98.0",
     "dotenv": "^16.4.7"
