refactor(PERC-105): dedup keeper/oracle services, fix stale Dockerfiles
Phase 4 repo-split cleanup:

- Remove services/keeper/ (108-line crank-only duplicate of packages/keeper/)
- Remove services/oracle/ (standalone price pusher, already in packages/keeper/src/services/oracle.ts)
- Remove services/* from pnpm-workspace.yaml
- Remove stale root Dockerfile (referenced non-existent packages/server/)
- Remove stale Dockerfile.server (same as root Dockerfile)
- Remove duplicate Dockerfile.keeper (identical to packages/keeper/Dockerfile)
- Fix all Dockerfiles: pnpm --filter @percolator/core → @percolator/sdk
  (package was renamed in Phase 1 PR #345 but Dockerfiles were missed)
- Update BACKEND-ARCHITECTURE.md with cleanup notes

packages/keeper/ remains the single canonical keeper with:
  - CrankService (multi-market discovery + crank loop)
  - OracleService (DexScreener + Jupiter, cross-validation)
  - LiquidationService (atomic liquidation transactions)
  - Health endpoint, Sentry monitoring, graceful shutdown
  - 36 passing tests

All builds pass. All 74+ tests pass.

--- a/Dockerfile.indexer
+++ b/Dockerfile.indexer
@@ -9,7 +9,7 @@ WORKDIR /app
 # Copy workspace config and root package files
 COPY pnpm-workspace.yaml package.json pnpm-lock.yaml ./
 
-# Copy shared, core, and indexer packages
+# Copy shared, sdk, and indexer packages
 COPY packages/shared ./packages/shared
 COPY packages/core ./packages/core
 COPY packages/indexer ./packages/indexer
@@ -17,9 +17,9 @@ COPY packages/indexer ./packages/indexer
 # Install all dependencies
 RUN pnpm install --frozen-lockfile
 
-# Build shared and core first
+# Build shared and sdk first
 RUN pnpm --filter @percolator/shared build
-RUN pnpm --filter @percolator/core build
+RUN pnpm --filter @percolator/sdk build
 
 # Build indexer
 RUN pnpm --filter @percolator/indexer build
