--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -9,7 +9,7 @@ WORKDIR /app
 # Copy workspace config and root package files
 COPY pnpm-workspace.yaml package.json pnpm-lock.yaml ./
 
-# Copy shared, core, and api packages
+# Copy shared, sdk, and api packages
 COPY packages/shared ./packages/shared
 COPY packages/core ./packages/core
 COPY packages/api ./packages/api
@@ -17,9 +17,9 @@ COPY packages/api ./packages/api
 # Install all dependencies
 RUN pnpm install --frozen-lockfile
 
-# Build shared and core first
+# Build shared and sdk first
 RUN pnpm --filter @percolator/shared build
-RUN pnpm --filter @percolator/core build
+RUN pnpm --filter @percolator/sdk build
 
 # Build api
 RUN pnpm --filter @percolator/api build
