fix: commit SDK dist and add CI staleness check (#378) (#379)
* docs: add CHANGELOG.md with 90+ merged PRs categorized by area

Compiled all merged PRs from Sprint 1-3 (Feb 19-25, 2026), categorized into:
- On-Chain (18 PRs)
- Frontend (24 PRs)
- Backend/API/Keeper (19 PRs)
- CI/Testing (20 PRs)
- Deployments/Infra (5 PRs)
- Dependencies/Security (4 PRs)
- Other (7 PRs)

Feeds PERC-098.

* fix: commit SDK dist and add CI staleness check (#378)

- Un-ignore packages/core/dist/ in .gitignore so built SDK is tracked
- Commit freshly built dist with correct SLAB_TIERS values
  (Small=65088, Medium=257184, Large=1025568)
- Add CI step to verify dist matches source after rebuild
- Prevents stale dist bugs like #378 where PR #375 updated source
  but dist was never rebuilt/committed

Fixes #378

---------

Co-authored-by: dcccrypto <dcccrypto@users.noreply.github.com>

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -39,6 +39,14 @@ jobs:
       # and the subsequent package builds fail with TS2307.
       - name: Build SDK package
         run: pnpm --filter @percolator/sdk build
+
+      - name: Verify SDK dist is up-to-date
+        run: |
+          if ! git diff --quiet packages/core/dist/; then
+            echo "::error::SDK dist is stale! Run 'pnpm --filter @percolator/sdk build' and commit the updated dist."
+            git diff --stat packages/core/dist/
+            exit 1
+          fi
         
       - name: Build shared package
         run: pnpm --filter @percolator/shared build
