--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -17,6 +17,7 @@
     "@solana/web3.js": "^1.98.0",
     "@supabase/supabase-js": "^2.49.1",
     "bs58": "^6.0.0",
+    "tweetnacl": "^1.0.3",
     "dotenv": "^16.4.7",
     "zod": "^4.3.6"
   },
