--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "next": "16.1.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "recharts": "^3.7.0",
     "swr": "^2.4.0"
   },
   "devDependencies": {
