Fix/issue 347 helius client key hardening (#437)
* fix: make rpc proxy read-only allowlist

* fix(app): harden Helius client key usage (#347)

---------

Co-authored-by: Spectrolite007 <spectrolite007@github.com>

--- a/app/.env.example
+++ b/app/.env.example
@@ -2,6 +2,8 @@
 HELIUS_API_KEY=
 # Helius RPC API key (client-side, exposed to browser)
 NEXT_PUBLIC_HELIUS_API_KEY=
+# Optional: dedicated client-side key for direct Helius WebSocket subscriptions
+NEXT_PUBLIC_HELIUS_WS_API_KEY=
 # Optional: override the full RPC URL (client-side)
 NEXT_PUBLIC_HELIUS_RPC_URL=
 
