feat(PERC-283): SDK dynamic fee helpers — rebuild dist, add 53 tests (#500)
* feat(PERC-283): add dynamic fee helpers to SDK

- computeDynamicFeeBps: tiered fee rate selection (mirrors on-chain)
- computeDynamicTradingFee: fee amount with ceiling division
- computeFeeSplit: LP/protocol/creator fee split
- FeeTierConfig, FeeSplitConfig interfaces

* fix(PERC-283): rebuild SDK dist, extract warmup module, add dynamic fee tests

- Move warmup utilities to math/warmup.ts (fixes broken import after removal)
- Add comprehensive unit tests for computeDynamicFeeBps, computeDynamicTradingFee, computeFeeSplit (53 tests)
- Update warmup test imports to point to new module
- Rebuild dist/ (fixes stale dist CI failure)
- Add warmup + dynamic-fees tests to package.json test script

---------

Co-authored-by: dcccrypto <dcccrypto@users.noreply.github.com>

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsup",
-    "test": "tsx test/abi.test.ts && tsx test/pda.test.ts && tsx test/slab.test.ts && tsx test/validation.test.ts && tsx test/dex-oracle.test.ts && tsx test/trading.test.ts"
+    "test": "tsx test/abi.test.ts && tsx test/pda.test.ts && tsx test/slab.test.ts && tsx test/validation.test.ts && tsx test/dex-oracle.test.ts && tsx test/trading.test.ts && tsx test/warmup-leverage-cap.test.ts && tsx test/dynamic-fees.test.ts"
   },
   "dependencies": {
     "@solana/spl-token": "^0.4.14",
